Fixing some overlapping issues

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ button {
     color: white;
     overflow: auto;
     cursor: pointer;
+    min-width: 80px;
 }
 
 section {
@@ -377,6 +378,7 @@ h3 {
 .flex-short .btn-banner {
     width: 100%;
     border: none;
+
 }
 
 .q-and-a h3 {
@@ -408,6 +410,7 @@ footer {
     padding-top: 50px;
     background-color: #000000;
     color: white;
+    overflow: auto;
 }
 
 footer ul li:first-child {
